add login and login form for admin

--- a/fe/src/components/navigationbar/navbar.module.css
+++ b/fe/src/components/navigationbar/navbar.module.css
@@ -5,3 +5,12 @@
 .logo{
     width: 200px;
 }
+
+.userAdmin{
+    font-size: 30px;
+    color: white;
+}
+.userAdmin:hover{
+    
+    transform: scale(1.2);
+}
